[package]
name = "drunken-bishop"
version = "0.3.0"
edition = "2021"
description = "OpenSSH fingerprint visualization algorithm in Rust."
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"

[[bin]]
name = "drunken-bishop"
path = "src/main.rs"

[lib]
name = "drunken_bishop"
path = "src/lib.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.4.6", features = ["derive"] }

# SHA-256 hashing
sha256 = { version = "1.4.0", default-features = false }

# Logging
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
