[package]
name = "drunken-bishop"
version = "0.4.1"
edition = "2024"
description = "OpenSSH fingerprint visualization algorithm in Rust."
authors = ["kaoru <k@warpnine.io>"]
license = "MIT"

[[bin]]
name = "drunken-bishop"
path = "src/main.rs"

[lib]
name = "drunken_bishop"
path = "src/lib.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.6.1", features = ["derive"] }

# SHA-256 hashing
sha256 = { version = "1.6.0", default-features = false }

# Logging
log = "0.4.33"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
